ros2_ws/log/build_2023-09-29_16-21-42/bluey_tools/stderr.log
  File "/home/jenkin/Documents/bluey/ros2_ws/install/bluey_tools/lib/python3.8/site-packages/bluey_tools/bluey_ctrl_node.py", line 114
    if (channel_id < 0)||(channel_id >= BlueyCtrNode._NCHANNELS)
                        ^
SyntaxError: invalid syntax

